fix ajustes no z-index do success message

--- a/css/contact.css
+++ b/css/contact.css
@@ -10,20 +10,18 @@
     width: 45%;
 }
 
+.contact-info h3, h2, p {
+    margin-bottom: 20px;
+}
+
 .contact-info h3 {
     font-weight: 400;
     font-size: 24px;
-    margin-bottom: 20px;
 }
 
 .contact-info h2 {
     font-weight: 700;
     font-size: 42px;
-    margin-bottom: 20px;
-}
-
-.contact-info p {
-    margin-bottom: 20px;
 }
 
 .contact-forms {
@@ -39,19 +37,14 @@ form {
     border-radius: 10px;
 }
 
-input,
-textarea,
-button {
+input, textarea, button {
     background-color: var(--color-light-purple);
     padding: 20px;
     border: 2px solid transparent;
     border-radius: 10px;
 }
 
-input:valid,
-input:focus,
-textarea:valid,
-textarea:focus {
+input:valid, input:focus, textarea:valid, textarea:focus {
     background-color: #ECE3FE;
     outline: 2px solid var(--color-medium-purple);
 }
@@ -70,7 +63,7 @@ textarea:focus {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 9998;
+    z-index: -1;
     opacity: 0;
     transition: opacity 0.3s ease;
 }
@@ -88,19 +81,20 @@ textarea:focus {
     font-size: 16px;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
+    z-index: -1;
     opacity: 0;
     transition: opacity 0.3s ease, transform 0.3s ease;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 10px; 
 }
 
 #success-message.show {
     display: block;
     opacity: 1;
+    z-index: 1000;
 }
 
 .loading-spinner {
@@ -150,9 +144,7 @@ textarea:focus {
         padding: 20px;
     }
 
-    input,
-    textarea,
-    button {
+    input, textarea, button {
         padding: 15px;
         font-size: 14px;
     }
@@ -197,14 +189,10 @@ textarea:focus {
     }
 
     form {
-        padding: 20px;
-        max-width: 80%;
-        margin: 0 auto;
+        padding: 25px;
     }
 
-    input,
-    textarea,
-    button {
+    input, textarea, button {
         padding: 18px;
         font-size: 16px;
     }
