--- a/css/header.css
+++ b/css/header.css
@@ -184,7 +184,7 @@ button:hover {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        z-index: 1100;
+        z-index: 100;
     }
 }
 
